airflow/logs/dag_id=Google_map/run_id=manual__2025-03-15T220129.743852+0000/task_id=extract_data_task/attempt=2.log
[2025-03-15T22:05:32.128+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Google_map.extract_data_task manual__2025-03-15T22:01:29.743852+00:00 [queued]>
[2025-03-15T22:05:32.149+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Google_map.extract_data_task manual__2025-03-15T22:01:29.743852+00:00 [queued]>
[2025-03-15T22:05:32.149+0000] {taskinstance.py:2170} INFO - Starting attempt 2 of 3
[2025-03-15T22:05:32.213+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): extract_data_task> on 2025-03-15 22:01:29.743852+00:00
[2025-03-15T22:05:32.233+0000] {standard_task_runner.py:60} INFO - Started process 170675 to run task
[2025-03-15T22:05:32.256+0000] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'Google_map', 'extract_data_task', 'manual__2025-03-15T22:01:29.743852+00:00', '--job-id', '92', '--raw', '--subdir', 'DAGS_FOLDER/google_map_dag_etl.py', '--cfg-path', '/tmp/tmp7zysvpjs']
[2025-03-15T22:05:32.264+0000] {standard_task_runner.py:88} INFO - Job 92: Subtask extract_data_task
[2025-03-15T22:05:32.490+0000] {task_command.py:423} INFO - Running <TaskInstance: Google_map.extract_data_task manual__2025-03-15T22:01:29.743852+00:00 [running]> on host DESKTOP-AVAHALM.
[2025-03-15T22:05:32.884+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='master_m2si' AIRFLOW_CTX_DAG_ID='Google_map' AIRFLOW_CTX_TASK_ID='extract_data_task' AIRFLOW_CTX_EXECUTION_DATE='2025-03-15T22:01:29.743852+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-03-15T22:01:29.743852+00:00'
[2025-03-15T22:05:32.889+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/nord/venv/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/nord/venv/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/nord/venv/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/home/nord/airflow/dags/google_map_dag_etl.py", line 35, in <lambda>
    python_callable=lambda: __import__('scripts.mini_scraping').main()
  File "/home/nord/airflow/dags/scripts/mini_scraping.py", line 1
    import re
    ^
IndentationError: unexpected indent
[2025-03-15T22:05:32.945+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=Google_map, task_id=extract_data_task, execution_date=20250315T220129, start_date=20250315T220532, end_date=20250315T220532
[2025-03-15T22:05:33.032+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 92 for task extract_data_task (unexpected indent (mini_scraping.py, line 1); 170675)
[2025-03-15T22:05:33.102+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-03-15T22:05:33.290+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
